refactor: テスト実行関連の改修 ・自動生成系のコードをカバレッジ対象外に変更 ・起動引数がなくても処理を継続可能なように改修 closes #2